--- a/packages/venia-concept/src/components/MiniCart/miniCart.css
+++ b/packages/venia-concept/src/components/MiniCart/miniCart.css
@@ -1,11 +1,13 @@
 .root {
+    --minicart-height: 100vh;
+    --minicart-header-height: 3.5rem;
     align-content: start;
     background-color: white;
     bottom: 0;
     box-shadow: -1px 0 rgb(var(--venia-border));
     display: grid;
     grid-template-rows: min-content 1fr;
-    height: 100vh;
+    height: var(--minicart-height);
     opacity: 0;
     overflow: hidden;
     position: fixed;
@@ -56,7 +58,7 @@
     grid-auto-flow: column;
     grid-auto-rows: 3rem;
     grid-template-columns: 1fr;
-    height: 3.5rem;
+    height: var(--minicart-header-height);
     justify-content: end;
     padding: 0 1rem;
     position: relative;
